public/css/base.css
/*===================================================================================================
1) Reset & basics
===================================================================================================*/
	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
		margin: 0;
		padding: 0;
		border: 0;
		font-size: 100%;
		font: inherit;
		vertical-align: baseline; }
	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
		display: block; }


/*===================================================================================================
2) Basic styles  (edihted)
===================================================================================================*/
	#myCareer {

	    display: block;
	    position: relative;
	    top: 250px;
	    margin: auto;
	    font-size: 33px;
	    text-align: center;
	}
	#myCareer h3{
	    color: white!important;
	    font-size:30px!important;
	    font-weight: 400;
	}

    
    body {
    padding:0;

    }
    
    #portfolio-button{
      
        width:100%; 
        height:900px; 
        background-image:url('./../chaos.jpg'); 
        background-repeat:no-repeat; background-size:cover; 
        background-attachment:fixed;
        color:white;
        background-blend-mode: multiply;
        background-color: rgba(0,0,0,0.2);
        z-index: 1000;
		display: block;
		cursor: pointer;
    }
    
    #portfolio-button:hover  {
    background-image:url('./../chaos2.jpg')!important;
color:black;
    }
    #portfolio-button:hover #arrow-portfolio ,  #portfolio-button:active #arrow-portfolio{
   
    color:red!important;
    }
    
      /*#portfolio-button:hover #eye-portfolio{
    width:200px!important;
    height:175px!important;
          background-image:url('open-eye.png')!important;
          top:215px!important;
          
    }*/
    #portfolio-button:hover #visitmyworks  {
    background-image: url('./../visitmyworks-black.png')!important;
    }
    #portfolio-button:hover #click-text {
    display:block!important;
    }
    
     #aboutme-button{
      
        width:100%; 
        height:900px; 
        background-image:url('./../khotoot-back.jpg'); 
        background-repeat:no-repeat; background-size:cover; 
        background-attachment:fixed;
        color:white;
        background-blend-mode: multiply;
        background-color: rgba(0,0,0,0.2);
           display: block;
    }
    #aboutme-button:hover  #eye-portfolio{
      width:200px!important;
    height:175px!important;
          background-image:url('./../open-eye.png')!important;
          top:215px!important;}
    
  #aboutme-front{

        width:100%; 
        height:900px; 
        background-image:url('./../khotoot-front.png'); 
        background-repeat:no-repeat; background-size:cover; 
        background-attachment:fixed;
        color:white;
        background-blend-mode: multiply;
        background-color: rgba(0,0,0,0.2);
           display: block;
    }
    
    #portfolio-button:hover #go-in-arrow{
    background-image: url('./../go-in-arrow.png');
    }
    
    #typed{
    
    margin:auto;
        color:white!important;
        font-size:30px;
    }
    div.type-wrap {
    text-align:center;
    position: relative;
    top:210px;
    }
	
body {
  font: 14px/21px Arial, sans-serif;
  font-size: 13px;
  text-align: left;
  background: #E3CAA1;
}








.scrollToTop{
	width:100px; 
	height:130px;
	padding:10px; 
	text-align:center; 
	background: whiteSmoke;
	font-weight: bold;
	color: #444;
	text-decoration: none;
	position: fixed;
	top:75px;
	right:40px;
	display: none;
	background: url(../arrow_up.png)  no-repeat 0px 20px;
	z-index:11;
	}
}
.scrollToTop:hover{
	text-decoration:none;
}

ul {
  text-align: left;

  margin: 0;
  padding: 15px 4px 17px 0;
  list-style: none;

}

.nav a:hover, li a:hover, .thumbnail-caption a:hover, .caption-hover {
	border-bottom: 1px solid #000 !important; 
}
#myDiv {
    height:100px;
    background:blue;
}


ul li ul {
  padding: 0;
  position: absolute;
  top: 14px;
  left: 0;
  width: 150px;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  display: none;
  opacity: 0;
  visibility: hidden;
  -webkit-transiton: opacity 0.2s;
  -moz-transition: opacity 0.2s;
  -ms-transition: opacity 0.2s;
  -o-transition: opacity 0.2s;
  -transition: opacity 0.2s;
   display: inline-block;
}
ul li ul li { 
  background: #555; 
  display: inline:block;
  color: #fff;
  

}

ul li ul li:hover {
	background: #666;

}
ul li:hover ul {
   
  opacity: 1;
  visibility: visible;
  allign : foloating;
}
/*===================================================================================================
3) Typography
===================================================================================================*/
	h1, h2, h3, h4, h5, h6 {
		color: #222;
		font-family: Georgia, Arial, sans-serif;
		font-weight: normal; }
	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
	h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
	h2 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
	h3 { font-size: 28px; line-height: 34px; margin-bottom: 6px; }
	h4 { font-size: 21px; line-height: 30px; margin-bottom: 6px; }
	h5 { font-size: 17px; line-height: 24px; }
	h6 { font-size: 14px; line-height: 21px; }
	.subheader { color: #777; }

	p { margin: 0 0 20px 0; }
	p img { margin: 0; }
	p.lead { font-size: 21px; line-height: 27px; color: #777;  }

	em { font-style: italic; }
	strong { font-weight: bold; color: #333; }
/* ... */

